#9282 URL 문서 및 DB 스크립트 현행화
- 포탈 URL 정리

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,6 +4,6 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="0; url=/portal/portalMain"></meta>
+<meta http-equiv="refresh" content="0; url=/portals/main"></meta>
 </head>
 </html>
