#10553 [SCSS 개선] mixins, function 리팩터링 검토 : layout.scss - mixin 이름 리팩토링

--- a/src/main/resources/static/designHTML/authEdit.html
+++ b/src/main/resources/static/designHTML/authEdit.html
@@ -102,7 +102,7 @@
                             <div class="menubar-left">
                                 <input class="search" placeholder="권한명/권한 설명">
                                 <span class="icon-search"></span>
-                                <span class="txt-num">32건</span>
+                                <span class="search-count">32건</span>
                             </div>
                             <div class="menubar-right">
                                 <span class="btn-add"></span>
